Bring MMR test scaffolding and test cases from k-NN plugin
Signed-off-by: Andriy Redko <drreta@gmail.com>